--- a/styles/partials/core/_furniture.scss
+++ b/styles/partials/core/_furniture.scss
@@ -27,7 +27,7 @@
 
         .logo {
           height: 23px;
-          filter: invert(100%) brightness(80%);
+          // filter: invert(100%) brightness(80%);
           margin-left: -5px;
         }
       }
